--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Zxynri-MD",
+    "name": "Zull-MD",
     "version": "3.5.4",
-    "description": "by.rozi",
+    "description": "Simple Bot Whatsapp",
     "depecrated": false,
     "main": "index.js",
     "directories": {
